--- a/pruebas/polls/templates/polls/productos.html
+++ b/pruebas/polls/templates/polls/productos.html
@@ -110,7 +110,7 @@
 
         <label for="color">¿Qué color prefieres?</label>
         <input
-            type="text"
+            type="color"
             id="color"
             name="color"
             placeholder="Ej: negro, pastel, azul claro"
